--- a/public/createrequest.html
+++ b/public/createrequest.html
@@ -1,1 +1,53 @@
-<h1>Create Request Form</h1>
+<!DOCTYPE html>
+<html>
+	
+	<head>
+		<title>Create Request Form</title>
+		<script type="text/javascript" src="/js/jquery-3.3.1.js"></script>
+		<script type="text/javascript">
+			
+			$(document).ready(function(){
+				$("#myButton").click(function(){
+					alert("Button clicked");
+
+					$.ajax({
+						method: "POST",
+						url: "https://swshetty.atlassian.net/rest/api/latest/issue",
+						dataType: "JSON",
+						headers:{
+							"Content-Type": "application/json",
+							"Authorization": "Basic " + btoa("swshetty@deloitte.com:7sn7N6zTAWSyQNv7ahCw86D7"),
+						},
+						data: {
+							"fields": {
+							   "project":
+							   { 
+							      "key": "TEST"
+							   },
+							   "summary": "REST EXAMPLE",
+							   "description": "Creating an issue via REST API",
+							   "issuetype": {
+							      "name": "Task"
+							   }
+							}
+						}
+					})
+					.done(function( respData ) {
+						alert( "Data Saved: " + respData );
+					})
+					.fail(function() {
+						alert( "error" );
+					});
+
+				});
+			});
+
+		</script>
+	</head>
+	
+	<body>
+		<h1>Create Request Form</h1>
+		<button id='myButton'>Submit</button>
+	</body>
+</html>
+
