--- a/public/createrequest.html
+++ b/public/createrequest.html
@@ -4,7 +4,9 @@
 	<head>
 		<title>Create Request Form</title>
 		<link rel="stylesheet" href="https://unpkg.com/@atlaskit/css-reset@2.0.0/dist/bundle.css" media="all">
-        <script src="https://swshetty.atlassian.net/atlassian-connect/all.js"></script>
+        <!-- <script src="https://swshetty.atlassian.net/atlassian-connect/all.js"></script> -->
+
+        <script src="https://connect-cdn.atl-paas.net/all.js" async></script>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 		
@@ -50,8 +52,14 @@
 	</head>
 	
 	<body>
-		<h1>Create Request Form</h1>
-		<button id='myButton'>Submit</button>
+		
+
+		<div class="ac-content">
+	    	<h1>Create Request Form</h1>
+		    <button id='myButton'>Submit</button>
+
+		</div>
+
 	</body>
 </html>
 
