--- a/public/createrequest.html
+++ b/public/createrequest.html
@@ -124,7 +124,7 @@
 			
 		    	<h1 class='header1'>Welcome!</h1>
 		    	<h2 class='header2'>Vodafone-Idea studio to the rescue!</h2>
-		    	<p class='body_copy'>Please click the button below to submit your requets for a new work item, defect or anything else.</p>
+		    	<p class='body_copy'>Please click the button below to submit your requests for a new work item, defect or anything else.</p>
 			    <button id='myCustomTrigger' class="button">Submit New Request</button>
 
 				<img class='people_img' src="images/people.png" alt="Vodafone Logo">			    
