updated with new issue collector

--- a/public/createrequest.html
+++ b/public/createrequest.html
@@ -131,18 +131,16 @@
 		    
 		</div>
 
-		<script type="text/javascript" src="https://swshetty.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/md6f5v/b/27/a44af77267a987a660377e5c46e0fb64/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=cabf26dd"></script>
+		<script type="text/javascript" src="https://swshetty.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-nu7cf5/b/29/a44af77267a987a660377e5c46e0fb64/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=fa38eb9e"></script>
 
-	    <script type="text/javascript">
-	    	window.ATL_JQ_PAGE_PROPS =  {
-				"triggerFunction": function(showCollectorDialog) {
-				//Requires that jQuery is available! 
-				jQuery("#myCustomTrigger").click(function(e) {
-					e.preventDefault();
-					showCollectorDialog();
-				});
-			}};
-		</script>
+	    <script type="text/javascript">window.ATL_JQ_PAGE_PROPS =  {
+		"triggerFunction": function(showCollectorDialog) {
+			//Requires that jQuery is available! 
+			jQuery("#myCustomTrigger").click(function(e) {
+				e.preventDefault();
+				showCollectorDialog();
+			});
+		}};</script>
 
 	</body>
 </html>
